--- a/css/theme-dark.css
+++ b/css/theme-dark.css
@@ -8,3 +8,13 @@
 .img-bw {
     filter: invert(1);
 }
+
+::selection {
+    background-color: white;
+    color: black;
+}
+
+::-moz-selection {
+    background-color: white;
+    color: black;
+}
