--- a/css/theme-light.css
+++ b/css/theme-light.css
@@ -8,3 +8,13 @@
 .img-bw {
     filter: none;
 }
+
+::selection {
+    background-color: black;
+    color: white;
+}
+
+::-moz-selection {
+    background-color: black;
+    color: white;
+}
